--- a/style2.css
+++ b/style2.css
@@ -44,7 +44,7 @@ body{
 }
 #section2{
   padding-top:10px;height:500px;
-  color: rgb(0, 0, 0);
+  color: #000000;
   background-color: #FFFFFF ;
 }
 #section3 {
