--- a/style2.css
+++ b/style2.css
@@ -50,7 +50,8 @@ body{
 #section3 {
   background-size: cover;
   color: #000000;
-  padding-top:10px;height:450px;
+  padding-top:10px;
+  height:450px;
   text-align: center;
 }
 
